tests/fixtures/errors/domain_invalid_key.gcl
// domain_invalid_key.gcl -- unknown constraint key
param mass: Mass(limit: 10.0 kg) = 500.0 kg;
